[gd_scene load_steps=5 format=3 uid="uid://dw06gm2b1vud7"]

[ext_resource type="Script" uid="uid://dm10rva2ja187" path="res://scripts/armas/ArmaBase.gd" id="1_5gg1y"]
[ext_resource type="PackedScene" uid="uid://bqjkouyrpyfr1" path="res://scenes/armas/Bala.tscn" id="2_ln0v6"]
[ext_resource type="Texture2D" uid="uid://c0jg2abu2dgkk" path="res://assets/sprites/armas/guns/AK47.png" id="3_5gg1y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8bdao"]
radius = 13.0

[node name="Ametralladora" type="Node2D"]
script = ExtResource("1_5gg1y")
bala_scene = ExtResource("2_ln0v6")
velocidad_disparo = 0.1
es_automatica = true

[node name="Ak47" type="Sprite2D" parent="."]
texture = ExtResource("3_5gg1y")

[node name="Punta" type="Marker2D" parent="."]
position = Vector2(15, -2)

[node name="AreaRecogida" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaRecogida"]
shape = SubResource("CircleShape2D_8bdao")

[connection signal="body_entered" from="AreaRecogida" to="." method="_on_area_recogida_body_entered"]
[connection signal="body_exited" from="AreaRecogida" to="." method="_on_area_recogida_body_exited"]
